--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   redux: 4.0.0
   flutter_redux: 0.6.0
   redux_thunk: 0.3.0
+  redux_logging: 0.4.0
   bloc: 3.0.0
   flutter_bloc: 3.2.0
   dio: 3.0.8
